--- a/views/products.pug
+++ b/views/products.pug
@@ -11,3 +11,5 @@ each val in productos
     - var imageLink = val.thumbnail;
     img(src=imageLink width='100' height='auto' alt='miniatura')
     hr
+else
+    p= "No hay productos"
