Agrega caso sin productos

--- a/views/list.hbs
+++ b/views/list.hbs
@@ -8,4 +8,6 @@
         <img src="{{thumbnail}}" width="100" height="auto" alt="miniatura">
         <hr>
     </div>
+    {{else}}
+    <p>No hay productos</p>
 {{/each}}
