Agrega caso sin productos

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -2,11 +2,15 @@
 <button onclick="location.href='/'">Agregar productos</button>
 <hr>
 
-    <% for(var i=0; i <arrayProductos.length; i++) { %>
-        <div>
-            <p><%= arrayProductos[i].title %></p>
-            <p><%= arrayProductos[i].price %></p>
-            <img src=<%= arrayProductos[i].thumbnail %> width="100" height="auto" alt="miniatura">
-            <hr>
-        </div>
-    <% } %>
+<% if (arrayProductos.length > 0) { %>
+        <% for(var i=0; i <arrayProductos.length; i++) { %>
+            <div>
+                <p><%= arrayProductos[i].title %></p>
+                <p><%= arrayProductos[i].price %></p>
+                <img src=<%= arrayProductos[i].thumbnail %> width="100" height="auto" alt="miniatura">
+                <hr>
+            </div>
+        <% } %>
+<%} else { %>
+    <p>No hay productos </p>
+<% } %>
