--- a/views/list.hbs
+++ b/views/list.hbs
@@ -1,6 +1,4 @@
 <h2>Lista de Productos</h2>
-<button onclick="location.href='/'">Agregar productos</button>
-<hr>
 <table>
     <tr>
         <th>Título</th>
@@ -12,7 +10,7 @@
             <td>{{title}}</td>
             <td>{{price}}</td>
             <td>
-                <img src="{{thumbnail}}" width="50" height="auto" alt="miniatura">
+                <img src="{{thumbnail}}" width="50" height="auto" alt="miniatura no disponible">
             </td>
         </tr>
     {{else}}
