--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,4 +1,3 @@
-{{!-- Contenedor, recibe en 'body' --}}
 <!DOCTYPE html>
 <html>
 
@@ -8,6 +7,14 @@
     </head>
 
     <body>
+        <h2>Ingrese Producto</h2>
+        <form action="/" method="POST">
+            Title: <input type="text" name="title" />
+            Price: <input type="text" name="price" />
+            Thumbnail: <input type="text" name="thumbnail" />
+            <button type="submit">Agregar</button>
+        </form>
+        <hr>
         {{{body}}}
     </body>
 
