--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
     <head>
-        <meta charset="utf-8">
-        <title>Handlebars</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Web Sockets</title>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="js/main.js"></script>
     </head>
 
     <body>
@@ -16,6 +19,12 @@
         </form>
         <hr>
         {{{body}}}
+        <form onsubmit="return addMessage(this)">
+            <input type="text" id="userName" placeholder="Ingresa tu nombre">
+            <input type="text" id="texto" placeholder="Cuentanos algo...">
+            <input type="submit" value="Enviar">
+        </form>
+        <div id="mensajes"></div>
     </body>
 
 </html>
