Transforma"productos" en modelo

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,11 +11,11 @@
 
     <body>
         <h2>Ingrese Producto</h2>
-        <form action="/" method="POST">
-            Title: <input type="text" name="title" />
-            Price: <input type="text" name="price" />
-            Thumbnail: <input type="text" name="thumbnail" />
-            <button type="submit">Agregar</button>
+        <form onsubmit="return addProducts(this)">
+            Title: <input type="text" id="title" />
+            Price: <input type="text" id="price" />
+            Thumbnail: <input type="text" id="thumbnail" />
+            <input type="submit" value="Agregar">
         </form>
         <hr>
         {{{body}}}
