--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,7 +11,7 @@
 
     <body>
         <h2>Ingrese Producto</h2>
-        <form onsubmit="return addProducts(this)">
+        <form onsubmit="return addProduct(this)">
             Title: <input type="text" id="title" />
             Price: <input type="text" id="price" />
             Thumbnail: <input type="text" id="thumbnail" />
