Agrega timestamp al chat

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,8 +20,8 @@
         <hr>
         {{{body}}}
         <form onsubmit="return addMessage(this)">
-            <input type="text" id="userName" placeholder="Ingresa tu nombre">
-            <input type="text" id="texto" placeholder="Cuentanos algo...">
+            Usuario: <input type="text" id="email" placeholder="Tu email"><br>
+            Mensaje: <input type="text" id="texto" placeholder="Mensaje">
             <input type="submit" value="Enviar">
         </form>
         <div id="mensajes"></div>
