--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -14,10 +14,9 @@
         <h2>Probar con Postman</h2>
         <p>Ajuste nivel de user: folder 'data' - archivo 'userLevel.js'</p>
         <hr>
-        <h3>Estructura:</h3>
-        <p>  { "nombre": string, "descripcion": string, "codigo": string, "url": string, "precio": number, "stock": number }</p>
-  <p>ID y TIMESTAMP son asignados automáticamente</p>
-  <hr>
+        <h3>Instrucciones:</h3>
+        <p>Ver archivo 'README.md'</p>
+        <hr>
     </body>
 
 </html>
