--- a/views/list.hbs
+++ b/views/list.hbs
@@ -30,8 +30,13 @@
 <hr>
 
         <form onsubmit="return addMessage(this)">
-            Usuario: <input type="text" id="email" placeholder="Tu email"><br>
-            Mensaje: <input type="text" id="texto" placeholder="Mensaje">
+            Usuario: <input type="email" id="id" placeholder="Tu email"><br>
+            Nombre: <input type="text" id="nombre" placeholder="Tu nombre"><br>
+            Apellido: <input type="text" id="apellido" placeholder="Tu apellido"><br>
+            Edad: <input type="number" id="edad" placeholder="Edad"><br>
+            Alias: <input type="text" id="alias" placeholder="Alias"><br>
+            Avatar: <input type="text" id="avatar" placeholder="url avatar"><br>
+            Mensaje: <input type="text" id="text" placeholder="Mensaje">
             <input type="submit" value="Enviar">
         </form>
         <div id="mensajes"></div>
